# BasicNeighborhoodFeatures

./: .gitignore  CMakeLists.txt  Config.h.in  LICENSE  README.md
debugger/: CMakeLists.txt  PangoCloud.h  PangoVis.cpp  PangoVis.h
inc/: 3DFeatureDetection.h  BNFIo.h  BSCDescription.h  PCA.h
src/: 3DFeatureDetection.cpp  BSCDescription.cpp
test/: CMakeLists.txt  test_env.cpp  test_featureDetection.cpp
